--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "cross-env": "^5.0.5",
@@ -61,6 +62,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^0.14.3",
+    "jest": "^23.6.0",
     "jest-cli": "^23.5.0",
     "mongodb-memory-server": "^2.1.0",
     "nodemon": "^1.10.2",
