--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
+services: mongodb
 node_js:
   - node
+# before_script:
+#   - sleep 15
+#   - mongo netguru --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 script:
   - npm test -i --coverage
