--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "precommit": "pretty-quick --staged"
   },
   "jest": {
-    "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js"
+    "testEnvironment": "node"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
