--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "start": "node .",
-    "test": "jest",
+    "test": "jest --forceExit",
     "coverage": "npm test -- --coverage",
     "postcoverage": "opn coverage/lcov-report/index.html",
     "dev": "nodemon -i \"*.test.js\" .",
@@ -64,7 +64,6 @@
     "husky": "^0.14.3",
     "jest": "^23.6.0",
     "jest-cli": "^23.5.0",
-    "mongodb-memory-server": "^2.1.0",
     "nodemon": "^1.10.2",
     "prettier": "1.14.2",
     "pretty-quick": "^1.6.0",
